# rag-evaluation

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/notebooks/: embed_to_openwebui_v2.ipynb  golden_set.json  rag_evaluation.ipynb  rag_evaluation_clean_text.ipynb  ragas_detail_haystack_bm25.csv  ragas_detail_haystack_semantic.csv  ragas_detail_langchain_rag.csv  ragas_detail_simple_rag.csv  ragas_summary.csv
